Fixed Outline of Radio Buttons and Checkboxes also updated the page to only be visible once the initial CSS is downloaded

--- a/src/sass/base/base-fields.scss
+++ b/src/sass/base/base-fields.scss
@@ -374,7 +374,17 @@ textarea:focus {
 .en__field__input--radio:focus + .en__field__label::before,
 .en__field__input--checkbox:focus + .en__field__label::before,
 .en__contactDetails__select:focus + .en__contactDetails__rows::before {
-  outline: var(--client-gray, $client-gray) auto 0.3125rem;
+  // outline: var(--client-gray, $client-gray) auto 0.3125rem;
+  // border-color: var(--client-input-border-color-focus, #4d4d4d);
+}
+
+.en__field__input--radio:focus + .en__field__label,
+.en__field__input--checkbox:focus + .en__field__label,
+.en__contactDetails__select:focus + .en__contactDetails__rows {
+  // outline: 2px solid var(--client-input-border-color-focus, #4d4d4d);
+  // outline-offset: 3px;
+  outline: -webkit-focus-ring-color auto 1px;
+  outline-offset: 3px;
 }
 
 /* QA Needed: EN's hidden input field */
